# control

./: CMakeLists.txt  README.md  main.cpp
resources/: resource.h  resource.rc  sample_config.ini
src/: blocker.cpp  blocker.h  config.cpp  config.h  gui.cpp  gui.h  main.cpp  password.cpp  password.h  registry_utils.cpp  registry_utils.h  rule.h
